# RVC-AI

./: .gitignore  CMakeLists.txt  README.md
.cursor/commands/: rvc-01-inception.md  rvc-02-ooa.md  rvc-03-ood.md  rvc-04-ooi-tdd.md  rvc-05-ci-systemtest.md
.cursor/commands/ooad/: develop-unit-tests-gtest.md  map-to-code.md  review-phase-checkpoints.md  specify-fr-nfr.md  workflow-pipeline.md
.cursor/rules/: rvc-cpp-solid-readability.mdc  rvc-ooad-pipeline.mdc
.cursor/rules/ooad/: workflow.md
.cursor/rules/ooad/00-ooad-core/: RULE.md
.cursor/rules/ooad/system-test/: RULE.md
.cursor/rules/ooad/unit-test/: RULE.md
.cursor/skills/rvc-ooad-vnv/: SKILL.md
.github/workflows/: ci.yml  stage-build.yml  stage-deploy.yml  stage-integration-test.yml  stage-system-test.yml  stage-unit-test.yml
apps/: rvc_sim.cpp  rvc_tickd.cpp
arch/: system.md  usecases.md
arch/analysis/: domain-model.md  system-sequence-diagrams.md
arch/design/: class-diagram.md  implementation-mapping.md  packages.md  sequence-diagrams.md  solid-analysis.md
arch/design/interaction/: UC-001-session.md  UC-002-forward-tick.md  UC-003-obstacle-avoid.md  UC-004-dead-end-escape.md  UC-005-dust-boost.md
arch/domain/: model.md
arch/requirements/: fr-nfr.md  nfr-quality-attributes.md  system-requirements.md
arch/ssd/: UC-001-main-success.md  UC-002-main-success.md  UC-003-main-success.md  UC-004-main-success.md  UC-005-main-success.md
arch/use-cases/: use-cases.md
arch/usecase/: UC-001.md  UC-002.md  UC-003.md  UC-004.md  UC-005.md
arch/vnv/: system-tests-strategy.md  system-tests.md  tdd-traceability.md
docs/: agent-mode-playbook.md  ci-and-deployment-report.md  cursor-conventions.md  ooad-course-mapping.md  preliminary-requirements.md  simulator-runbook.md
include/rvc/: cleaning_coordinator.hpp  cleaning_power_policy.hpp  controller_config.hpp  grid_actuator.hpp  grid_sensor.hpp  grid_world.hpp  navigation_policy.hpp  ports.hpp  types.hpp
scripts/: check_lcov_threshold.py  generate_system_maps.py  publish-to-github.ps1  run_system_tests.ps1  run_system_tests.sh
sim/: rvc_grid_gui.py
src/: types.cpp
src/app/: cleaning_coordinator.cpp
src/domain/: cleaning_power_policy.cpp  navigation_policy.cpp
src/rvc/: cleaning_coordinator.cpp  grid_world.cpp  types.cpp
src/technical/: grid_actuator.cpp  grid_sensor.cpp  grid_world.cpp
system_tests/: run_all.py
system_tests/maps/: boxed_corner.json  open_room.json  s_001_idle_only.json  s_002_forward_open.json  s_003_dust_boost.json  s_004_partial_avoid.json  s_005_enclosure_escape.json  s_006_session_stopping.json  s_007_master_walkthrough.json  s_008_variant.json  s_009_variant.json  s_010_variant.json  s_011_variant.json  s_012_variant.json  s_013_variant.json  s_014_variant.json  s_015_variant.json  s_016_variant.json  s_017_variant.json  s_018_variant.json  s_019_variant.json  s_020_variant.json  s_021_variant.json  s_022_variant.json  s_023_variant.json  s_024_variant.json  s_025_variant.json  s_026_variant.json  s_027_variant.json  s_028_variant.json  s_029_variant.json  s_030_variant.json  s_031_variant.json  s_032_variant.json  s_033_variant.json  s_034_variant.json  s_035_variant.json  s_036_variant.json  s_037_variant.json  s_038_variant.json  (+5 more)
tests/: cleaning_coordinator_test.cpp  grid_world_test.cpp  integration_test.cpp  types_test.cpp
tests/integration/: test_coordinator_grid.cpp
tests/unit/: test_cleaning_power_policy.cpp  test_grid_actuator.cpp  test_grid_sensor.cpp  test_grid_world.cpp  test_navigation_policy.cpp  test_types.cpp
tools/: rvc_sim_main.cpp
